# swagger/openapi.json
@@ -1005,7 +1005,7 @@
         }
       }
     },
-    "/createawscircuitasync": {
+    "/createclouddxasync": {
       "post": {
         "tags": [
           "FLUID"
@@ -1018,14 +1018,14 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateNTUForASEInputParams"
+                "$ref": "#/components/schemas/CreateAwsDxInputParams"
               }
             }
           }
         },
         "responses": {
           "200": {
-            "description": "Xcloud AWS circuit has been added successfully",
+            "description": "AWS DX has been configured successfully",
             "content": {
               "application/json": {
                 "schema": {
@@ -1035,7 +1035,7 @@
             }
           },
           "400": {
-            "description": "Some issue occured while adding Xcloud AWS circuit",
+            "description": "Some issue occured while configuring AWS DX",
             "content": {
               "application/json": {
                 "schema": {
@@ -2294,6 +2294,68 @@
             "type": "boolean",
             "uniqueItems": true,
             "default": true
+          }
+        }
+      },
+      "CreateAwsDxInputParams": {
+        "type": "object",
+        "required": [
+          "name",
+          "serviceConfigurationId",
+          "ntuId",
+          "description",
+          "type",
+          "remotePortUuid",
+          "accountId",
+          "rateLimit",
+          "hostedType",
+          "awsType",
+          "downLinkPort"
+        ],
+        "properties": {
+          "name": {
+            "type": "string",
+            "uniqueItems": true
+          },
+          "serviceConfigurationId": {
+            "type": "string",
+            "uniqueItems": true
+          },
+          "ntuId": {
+            "type": "integer",
+            "uniqueItems": true
+          },
+          "description": {
+            "type": "string",
+            "uniqueItems": true
+          },
+          "type": {
+            "type": "string",
+            "uniqueItems": true
+          },
+          "remotePortUuid": {
+            "type": "string",
+            "uniqueItems": true
+          },
+          "accountId": {
+            "type": "string",
+            "uniqueItems": true
+          },
+          "rateLimit": {
+            "type": "string",
+            "uniqueItems": true
+          },
+          "hostedType": {
+            "type": "string",
+            "uniqueItems": true
+          },
+          "awsType": {
+            "type": "string",
+            "uniqueItems": true
+          },
+          "downLinkPort": {
+            "type": "integer",
+            "uniqueItems": true
           }
         }
       },
